<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Order</string>
    <string name="action_settings">Settings</string>
       
	<string name="small_btn">Small</string>
	<string name="medium_btn">Medium</string>
	<string name="big_btn">Big</string>
	
	<string name="cancel_btn">Cancel</string>
	<string name="order_btn">Order</string>
	
	<string name="reset_btn">Reset</string>
	<string name="checkout_btn">Check Out</string>
	<string name="save_btn">Save current order</string>
	
	<string name="about_title">About Food Order</string>
	<string name="about_msg">Android Food Order\n
                Author: Yabin Song\n\n
                Email: ysong46@hawk.iit.edu</string>
    <string name="ok_label">OK</string>
	<string name="homepage_label">Homepage</string>
	<string name="homepage_uri">http://www.mcdonalds.com/us/en/food.html</string>
	
</resources>
