<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imagview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
             />
    </RelativeLayout>

    <Button
        android:id="@+id/small_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/small_btn" />

    <TextView
        android:id="@+id/prize_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="270dp"
        android:text="$2.19" />

    <Button
        android:id="@+id/medium_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium_btn" />
    
    <TextView
        android:id="@+id/prize_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="270dp"
        android:text="$2.59" />

    <Button
        android:id="@+id/big_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/big_btn" />
    
     <TextView
            android:id="@+id/prize_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginLeft="270dp"
            android:text="$2.99" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/cancel_btn" />

        <Button
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="66dp"
            android:text="@string/order_btn" />

       

    </RelativeLayout>

</LinearLayout>